# Kintsugi

./: .env.example  .gitignore  APPLICATION.md  README.md  pyproject.toml  requirements.txt
data/: golden_real.json  golden_set.json
docs/: langgraph_port.md
kintsugi/: __init__.py  bench.py  cli.py  contract.py  engine.py  models.py  render.py  taxonomy.py  trace.py  validate.py  web.py
kintsugi/static/: index.html
tests/: test_contract.py  test_engine_mock.py  test_ladder.py
